@@ -1,27 +1,19 @@
 package com.plazoleta.infrastructure.out.jpa.entity;
 
 
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.EnumType;
-import jakarta.persistence.Enumerated;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
-import jakarta.persistence.UniqueConstraint;
-import java.time.LocalDate;
-import java.util.Collection;
-import java.util.stream.Collectors;
-
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-
 import com.plazoleta.infrastructure.out.jpa.util.Role;
-
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+
+import java.time.LocalDate;
+import java.util.Collection;
+import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -66,7 +58,7 @@ public class UserEntity implements UserDetails{
 	        return role.getPermissions().stream()
 	                .map(each -> each.name())
 	                .map(each -> new SimpleGrantedAuthority(each))
-	                .collect(Collectors.toList());
+	                .toList();
 	}
 
 	@Override
